# licita-onchain

./: .gitignore  Anchor.toml  DEMO.md  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.example  next.config.js  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/licitation/[address]/: page.tsx
app/src/app/licitations/: page.tsx
app/src/app/new/: page.tsx
app/src/app/profile/: page.tsx
app/src/app/transparency/: page.tsx
app/src/components/: Header.tsx
app/src/hooks/: useProfile.ts
app/src/lib/: anchor.ts  crypto.ts  format.ts  idl.json  licita_onchain.ts  supabase.ts
programs/licita-onchain/: Cargo.toml
programs/licita-onchain/src/: lib.rs
scripts/: setup.sh  sync-idl.sh
solana-release/: .crates.toml  .crates2.json  version.yml
supabase/: config.toml
supabase/migrations/: 0001_init.sql
tests/: licita-onchain.ts
