[package]
name = "licita-onchain"
version = "0.1.0"
description = "Licita OnChain — pregão eletrônico com commit-reveal"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "licita_onchain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
solana-program = "=1.18.26"
